--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,7 @@ CONTENTS:
 ============================================================ */
 
 div, article, section, header, footer, nav, li {
-	position:relative;
+	position:static;
 }
 .group:after {
 	display:block;
@@ -64,7 +64,7 @@ body {
 }
 
 body {
-    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    padding-top: 0px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
 
 ::-moz-selection {
@@ -278,18 +278,17 @@ h2.pagetitle {
 /* Uncomment to make nav expand full width */
  /*	width: auto; */
 }
-.navbar .brand {
-	margin-left:0;
-	padding: 0;
-	margin-top: 1.05em;
+
+.cnt-nav{
+	padding:0px 0px 0px 0px;
 }
-.navbar .brand a {
-	padding: 0;
-	color: #fff;
-	font-size: 1.75em;
-	margin-left: 0;
-	font-weight: 400;
-	text-transform:uppercase;
+
+.navbar .navbar-brand img {
+	width: 30%;	
+    position: static;
+    padding: 50px 50px;
+    z-index: -1;
+
 }
 .navbar .brand a:hover {
 	text-decoration: none;
@@ -301,7 +300,8 @@ h2.pagetitle {
 	outline: none;
 }
 .navbar-inner {
-	min-height: 4.75em;
+	max-height: 8em;
+	background-color: transparent;
 }
 .navbar-inverse .navbar-inner {
 	background-repeat: repeat;
@@ -342,9 +342,9 @@ ul#menu-main > li > a:focus {
 
 #header-wrapper {
 	width: 100%;
-	min-height: 600px;
-	margin-top: -60px;
-	padding-top:160px;
+	min-height: 400px;
+	margin-top: -150px;
+	padding-top:260px;
 	text-align:center;
 }
 
