--- a/templates/index.html
+++ b/templates/index.html
@@ -23,14 +23,18 @@
 <body>
 	<!-- navbar -->
 	<div class="navbar-wrapper">
-		<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar navbar-top-fixed">
 			<div class="navbar-inner">
-				<div class="container">
+				<div class="container cnt-nav">
 					<!-- Responsive navbar -->
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</a>
-					<h1 class="brand"><a href="index.html">Maxim</a></h1>
-					<!-- navigation -->
+					
+						<a class="navbar-brand" href="index.html">
+							<img alt="Brand" src="{% static 'img/logo_v.png' %}">
+						</a>
+					
+					<!-- navigation
 					<nav class="pull-right nav-collapse collapse">
 						<ul id="menu-main" class="nav">
 							<li><a title="team" href="#about">About</a></li>
@@ -40,7 +44,7 @@
 							<li><a title="contact" href="#contact">Contact</a></li>
 							<li><a href="page.html">Page</a></li>
 						</ul>
-					</nav>
+					</nav>-->
 				</div>
 			</div>
 		</div>
@@ -49,7 +53,7 @@
 	<div id="header-wrapper" class="header-slider">
 		<header class="clearfix">
 			<div class="logo">
-				<img src="{% static 'img/logo-image.png' %}" alt="" />
+				
 			</div>
 			<div class="container">
 				<div class="row">
