--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static%}
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -7,10 +8,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link href="css/bootstrap-responsive.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<link href="color/default.css" rel="stylesheet">
-	<link rel="shortcut icon" href="img/favicon.ico">
+	<link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<link href="{% static 'color/default.css' %}" rel="stylesheet">
+	<link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
 	<!-- =======================================================
     Theme Name: Maxim
     Theme URL: https://bootstrapmade.com/maxim-free-onepage-bootstrap-theme/
@@ -48,7 +49,7 @@
 	<div id="header-wrapper" class="header-slider">
 		<header class="clearfix">
 			<div class="logo">
-				<img src="img/logo-image.png" alt="" />
+				<img src="{% static 'img/logo-image.png' %}" alt="" />
 			</div>
 			<div class="container">
 				<div class="row">
@@ -110,14 +111,14 @@
 				</div>
 				<div class="span6">
 					<div class="aligncenter">
-						<img src="img/icons/creativity.png" alt="" />
+						<img src="{% static 'img/icons/creativity.png' %}" alt="" />
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="span2 offset1 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-1.jpg" alt="" />
+						<img class="team-thumb img-circle" src="{% static 'img/team/img-1.jpg' %}" alt="" />
 						<h3>John Doe</h3>
 						<p>
 							Art director
@@ -126,7 +127,7 @@
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-2.jpg" alt="" />
+						<img class="team-thumb img-circle" src="{% static 'img/team/img-2.jpg' %}" alt="" />
 						<h3>Mike Doe</h3>
 						<p>
 							Web developer
@@ -135,7 +136,7 @@
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-3.jpg" alt="" />
+						<img class="team-thumb img-circle" src="{% static 'img/team/img-3.jpg' %}" alt="" />
 						<h3>Neil Doe</h3>
 						<p>
 							Web designer
@@ -144,7 +145,7 @@
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-4.jpg" alt="" />
+						<img class="team-thumb img-circle" src="{% static 'img/team/img-4.jpg' %}" alt="" />
 						<h3>Mark Joe</h3>
 						<p>
 							UI designer
@@ -153,7 +154,7 @@
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-5.jpg" alt="" />
+						<img class="team-thumb img-circle" src="{% static 'img/team/img-5.jpg' %}" alt="" />
 						<h3>Stephen B</h3>
 						<p>
 							Digital imaging
@@ -173,7 +174,7 @@
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="img/icons/laptop.png" alt="" />
+						<img src="{% static 'img/icons/laptop.png' %}" alt="" />
 						<h2>Web design</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -182,7 +183,7 @@
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<img src="img/icons/lab.png" alt="" />
+						<img src="{% static 'img/icons/lab.png' %}" alt="" />
 						<h2>Web development</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -191,7 +192,7 @@
 				</div>
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="img/icons/camera.png" alt="" />
+						<img src="{% static 'img/icons/camera.png' %}" alt="" />
 						<h2>Photography</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -200,7 +201,7 @@
 				</div>
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
-						<img src="img/icons/basket.png" alt="" />
+						<img src="{% static 'img/icons/basket.png' %}" alt="" />
 						<h2>Ecommerce</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -254,8 +255,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print photography">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/1.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/1.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -269,8 +270,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print design web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/2.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/2.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -284,8 +285,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print design">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/3.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/3.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -299,8 +300,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/4.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/4.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -314,8 +315,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/5.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/5.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -329,8 +330,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/6.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/6.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -344,8 +345,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/7.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/7.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -359,8 +360,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/8.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/8.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -374,8 +375,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/9.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/9.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -389,8 +390,8 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid design web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/10.png" alt="" />
+								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="{% static 'img/works/10.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Portfolio name</h5>
@@ -431,7 +432,7 @@
 				<div class="span3">
 					<div class="home-post">
 						<div class="post-image">
-							<img class="max-img" src="img/blog/img1.jpg" alt="" />
+							<img class="max-img" src="{% static 'img/blog/img1.jpg' %}" alt="" />
 						</div>
 						<div class="post-meta">
 							<i class="icon-file icon-2x"></i>
@@ -450,7 +451,7 @@
 				<div class="span3">
 					<div class="home-post">
 						<div class="post-image">
-							<img class="max-img" src="img/blog/img2.jpg" alt="" />
+							<img class="max-img" src="{% static 'img/blog/img2.jpg' %}" alt="" />
 						</div>
 						<div class="post-meta">
 							<i class="icon-file icon-2x"></i>
@@ -469,7 +470,7 @@
 				<div class="span3">
 					<div class="home-post">
 						<div class="post-image">
-							<img class="max-img" src="img/blog/img3.jpg" alt="" />
+							<img class="max-img" src="{% static 'img/blog/img3.jpg' %}" alt="" />
 						</div>
 						<div class="post-meta">
 							<i class="icon-file icon-2x"></i>
@@ -488,7 +489,7 @@
 				<div class="span3">
 					<div class="home-post">
 						<div class="post-image">
-							<img class="max-img" src="img/blog/img4.jpg" alt="" />
+							<img class="max-img" src="{% static 'img/blog/img4.jpg' %}" alt="" />
 						</div>
 						<div class="post-meta">
 							<i class="icon-file icon-2x"></i>
@@ -587,18 +588,18 @@
 		<!-- ./container -->
 	</footer>
 	<a href="#" class="scrollup"><i class="icon-angle-up icon-square icon-bgdark icon-2x"></i></a>
-	<script src="js/jquery.js"></script>
-	<script src="js/jquery.scrollTo.js"></script>
-	<script src="js/jquery.nav.js"></script>
-	<script src="js/jquery.localScroll.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/jquery.prettyPhoto.js"></script>
-	<script src="js/isotope.js"></script>
-	<script src="js/jquery.flexslider.js"></script>
-	<script src="js/inview.js"></script>
-	<script src="js/animate.js"></script>
-	<script src="js/custom.js"></script>
-	<script src="contactform/contactform.js"></script>
+	<script src="{% static 'js/jquery.js' %}"></script>
+	<script src="{% static 'js/jquery.scrollTo.js' %}"></script>
+	<script src="{% static 'js/jquery.nav.js' %}"></script>
+	<script src="{% static 'js/jquery.localScroll.js' %}"></script>
+	<script src="{% static 'js/bootstrap.js' %}"></script>
+	<script src="{% static 'js/jquery.prettyPhoto.js' %}"></script>
+	<script src="{% static 'js/isotope.js' %}"></script>
+	<script src="{% static 'js/jquery.flexslider.js' %}"></script>
+	<script src="{% static 'js/inview.js' %}"></script>
+	<script src="{% static 'js/animate.js' %}"></script>
+	<script src="{% static 'js/custom.js' %}"></script>
+	<script src="{% static 'contactform/contactform.js' %}"></script>
 
 </body>
 
