--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
-{% load static%}
 <!DOCTYPE HTML>
+{% load static%}
+
 <html lang="en">
 
 <head>
 	<meta charset="utf-8">
-	<title>Maxim - Modern One Page Bootstrap Template</title>
+	<title>Visionrate - Олимпиада по робототехнике</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -12,12 +13,6 @@
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 	<link href="{% static 'color/default.css' %}" rel="stylesheet">
 	<link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
-	<!-- =======================================================
-    Theme Name: Maxim
-    Theme URL: https://bootstrapmade.com/maxim-free-onepage-bootstrap-theme/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
-	======================================================= -->
 </head>
 
 <body>
@@ -26,9 +21,9 @@
 		<div class="navbar navbar-top-fixed">
 			<div class="navbar-inner">
 				<div class="container cnt-nav">
-					<!-- Responsive navbar -->
+					<!-- Responsive navbar 
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</a>
+				</a>-->
 					
 						<a class="navbar-brand" href="index.html">
 							<img alt="Brand" src="{% static 'img/logo_v.png' %}">
@@ -58,23 +53,24 @@
 			<div class="container">
 				<div class="row">
 					<div class="span12">
+						<p class="text"></p>
 						<div id="main-flexslider" class="flexslider">
 							<ul class="slides">
 								<li>
 									<p class="home-slide-content">
-										<strong>creative</strong> and passion
+										Национальная <strong>Олимпида</strong> 
 									</p>
 								</li>
 								<li>
 									<p class="home-slide-content">
-										Eat and drink <strong>design</strong>
+										по <strong>Робототехнике</strong>
 									</p>
 								</li>
-								<li>
+								<!--<li>
 									<p class="home-slide-content">
 										We loves <strong>simplicity</strong>
 									</p>
-								</li>
+								</li>-->
 							</ul>
 						</div>
 						<!-- end slider -->
@@ -89,11 +85,11 @@
 			<div class="row">
 				<div class="span6 alignright flyLeft">
 					<blockquote class="large">
-						There's huge space beetween creativity and imagination <cite>Mark Simmons, Nett Media</cite>
+						Собираются все таланты страны в одном месте <cite></cite>
 					</blockquote>
 				</div>
 				<div class="span6 aligncenter flyRight">
-					<i class="icon-coffee icon-10x"></i>
+					<i class="icon-cogs icon-10x"></i>
 				</div>
 			</div>
 		</div>
@@ -102,11 +98,11 @@
 	<!-- section: team -->
 	<section id="about" class="section">
 		<div class="container">
-			<h4>Who We Are</h4>
+			<h4>Что такое VISIONRATE</h4>
 			<div class="row">
 				<div class="span4 offset1">
 					<div>
-						<h2>We live with <strong>creativity</strong></h2>
+						<h2>Олимпиада <strong>по робототехнике</strong></h2>
 						<p>
 							Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe
 							al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.
@@ -115,11 +111,11 @@
 				</div>
 				<div class="span6">
 					<div class="aligncenter">
-						<img src="{% static 'img/icons/creativity.png' %}" alt="" />
+						<img src="{% static 'img/icons/electronics.png' %}" alt="" />
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<!--<div class="row">
 				<div class="span2 offset1 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="{% static 'img/team/img-1.jpg' %}" alt="" />
@@ -164,26 +160,28 @@
 							Digital imaging
 						</p>
 					</div>
-				</div>
+				</div>-->
 			</div>
-		</div>
+		
 		<!-- /.container -->
 	</section>
 	<!-- end section: team -->
 	<!-- section: services -->
 	<section id="services" class="section orange">
 		<div class="container">
-			<h4>Services</h4>
+			<h4>Категории</h4>
 			<!-- Four columns -->
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
+					<a href="" class="categ">
 					<div class="service-box">
-						<img src="{% static 'img/icons/laptop.png' %}" alt="" />
-						<h2>Web design</h2>
+						<img src="{% static 'img/icons/line_follower.svg' %}" alt="" />
+						<h2>Lego Linefollower</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Robot parts can be only lego. Must be programmed to run the lines
 						</p>
 					</div>
+					</a>
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
@@ -575,7 +573,7 @@
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
 					</ul>
 					<p class="copyright">
-						&copy; Maxim Theme. All rights reserved.
+						&copy; ROBOTICS Olympiad All rights reserved.
 						<div class="credits">
 							<!--
                 All the links in the footer should remain intact.
@@ -583,7 +581,7 @@
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Maxim
               -->
-							<a href="https://bootstrapmade.com/">Free Bootstrap Templates</a> by BootstrapMade.com
+							<a href="https://github.com/tankeev">by Tankeev Azamat</a> 
 						</div>
 					</p>
 				</div>
