line follwer icon

--- a/templates/index.html
+++ b/templates/index.html
@@ -173,7 +173,7 @@
 			<!-- Four columns -->
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
-					<a href="" class="categ">
+					<a href="" class="categ" style="text-decoration:none;">
 					<div class="service-box">
 						<img src="{% static 'img/icons/line_follower.svg' %}" alt="" />
 						<h2>Lego Linefollower</h2>
@@ -186,9 +186,9 @@
 				<div class="span3 animated flyIn">
 					<div class="service-box">
 						<img src="{% static 'img/icons/lab.png' %}" alt="" />
-						<h2>Web development</h2>
+						<h2>Lego Sumo</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Robots have to move each other out of the ring
 						</p>
 					</div>
 				</div>
