--- a/templates/index.html
+++ b/templates/index.html
@@ -172,24 +172,26 @@
 			<h4>Категории</h4>
 			<!-- Four columns -->
 			<div class="row">
-				<div class="span3 animated-fast flyIn">
-					<a href="" class="categ" style="text-decoration:none;">
+				<div class="span3 animated-fast flyIn">					
 					<div class="service-box">
+						<a href="" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/line_follower.svg' %}" alt="" />
 						<h2>Lego Linefollower</h2>
 						<p>
 							Robot parts can be only lego. Must be programmed to run the lines
 						</p>
+						</a>
 					</div>
-					</a>
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<img src="{% static 'img/icons/lab.png' %}" alt="" />
+						<a href="" class="categ" style="text-decoration:none;">
+						<img src="{% static 'img/icons/sumo.svg' %}" alt="" />
 						<h2>Lego Sumo</h2>
 						<p>
 							Robots have to move each other out of the ring
 						</p>
+						</a>
 					</div>
 				</div>
 				<div class="span3 animated-fast flyIn">
