--- a/templates/index.html
+++ b/templates/index.html
@@ -176,7 +176,7 @@
 					<div class="service-box">
 						<a href="" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/line_follower.svg' %}" alt="" />
-						<h2>Lego Linefollower</h2>
+						<h2>Lego Line follower</h2>
 						<p>
 							Robot parts can be only lego. Must be programmed to run the lines
 						</p>
@@ -196,8 +196,8 @@
 				</div>
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="{% static 'img/icons/camera.png' %}" alt="" />
-						<h2>Photography</h2>
+						<img src="{% static 'img/icons/arduino.svg' %}" alt="" />
+						<h2>Ardunio Line Follower</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
