--- a/templates/index.html
+++ b/templates/index.html
@@ -205,8 +205,17 @@
 				</div>
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
-						<img src="{% static 'img/icons/basket.png' %}" alt="" />
-						<h2>Ecommerce</h2>
+						<img src="{% static 'img/icons/ollo_race.svg' %}" alt="" />
+						<h2>Ollo Race</h2>
+						<p>
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+						</p>
+					</div>
+				</div>
+				<div class="span3 animated-slow flyIn">
+					<div class="service-box">
+						<img src="{% static 'img/icons/ollo_ball.svg' %}" alt="" />
+						<h2>Ollo Ball Collector</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
