another line of categories added

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -450,6 +450,8 @@ header .logo {
 section.section {
 	padding: 10px 0 80px;
 }
+
+section
 section.section h4 {
 	text-align: center;
 	margin-bottom: 40px;
