--- a/templates/index.html
+++ b/templates/index.html
@@ -196,29 +196,59 @@
 				</div>
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
+						<a href="" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/arduino.svg' %}" alt="" />
 						<h2>Ardunio Line Follower</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
+						</a>
 					</div>
 				</div>
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
+						<a href="" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/ollo_race.svg' %}" alt="" />
 						<h2>Ollo Race</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
+						</a>
+					</div>
+				</div>				
+			</div>
+			<div class="row" style="margin-bottom:0px;">
+				<div class="span3 animated-fast flyIn">
+					<div class="service-box">
+						<a href="" class="categ" style="text-decoration:none;">
+							<img src="{% static 'img/icons/ollo_ball.svg' %}" alt="" />
+							<h2>Ollo Ball Collector</h2>
+							<p>
+								Robot parts can be only lego. Must be programmed to run the lines
+							</p>
+						</a>
 					</div>
 				</div>
-				<div class="span3 animated-slow flyIn">
+				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<img src="{% static 'img/icons/ollo_ball.svg' %}" alt="" />
-						<h2>Ollo Ball Collector</h2>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-						</p>
+						<a href="" class="categ" style="text-decoration:none;">
+							<img src="{% static 'img/icons/sumo.svg' %}" alt="" />
+							<h2>Bioloid Race</h2>
+							<p>
+								Robots have to move each other out of the ring
+							</p>
+						</a>
+					</div>
+				</div>
+				<div class="span3 animated-fast flyIn">
+					<div class="service-box">
+						<a href="" class="categ" style="text-decoration:none;">
+							<img src="{% static 'img/icons/arduino.svg' %}" alt="" />
+							<h2>Bioloid Sumo</h2>
+							<p>
+								Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							</p>
+						</a>
 					</div>
 				</div>
 			</div>
