header part is improved

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,13 +52,14 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="span12">
-						<p class="text"></p>
+					<div class="span12">						
+						<span class="date-text">10-Марта, лицей им. Ч.Айтматова, Бишкек, Кыргызстан </span>
+						<div class="year"></div><span class="title-text">VisionRate</span> <span class="title-year">2018</span></div>
 						<div id="main-flexslider" class="flexslider">
 							<ul class="slides">
 								<li>
 									<p class="home-slide-content">
-										Национальная <strong>Олимпида</strong> 
+										Национальная <strong>Олимпиaда</strong> 
 									</p>
 								</li>
 								<li>
@@ -232,7 +233,7 @@
 				<div class="span3 animated flyIn">
 					<div class="service-box">
 						<a href="" class="categ" style="text-decoration:none;">
-							<img src="{% static 'img/icons/sumo.svg' %}" alt="" />
+							<img src="{% static 'img/icons/bioloid_race.svg' %}" alt="" />
 							<h2>Bioloid Race</h2>
 							<p>
 								Robots have to move each other out of the ring
@@ -243,7 +244,7 @@
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
 						<a href="" class="categ" style="text-decoration:none;">
-							<img src="{% static 'img/icons/arduino.svg' %}" alt="" />
+							<img src="{% static 'img/icons/bioloid_sumo.svg' %}" alt="" />
 							<h2>Bioloid Sumo</h2>
 							<p>
 								Lorem Ipsum is simply dummy text of the printing and typesetting industry.
