--- a/static/css/flexslider.css
+++ b/static/css/flexslider.css
@@ -53,18 +53,23 @@ zoom: 1;
 .flex-viewport {max-height: 200px; margin-top: 0%; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; transition: all 1s ease;}
 .loading .flex-viewport {max-height: 200px;}
 .flexslider .slides {zoom: 1;}
-@media(max-height:800px)  {
+
+@media(max-width:500px)  {
 	.flex-viewport{
-		 max-height: 65px;
-		 margin-top: 0%;
+		max-height: 65px;
+    	margin-top: 85%;
 	}
 }
+@media(min-width:501px){
+.flex-viewport{
+	margin-top: 150px
+}}
 
 .carousel li {margin-right: 5px}
 
 
 /* Direction Nav */
-.flex-direction-nav { margin: 70px 0 0; }
+/*.flex-direction-nav { margin: 70px 0 0; }
 .flex-direction-nav a {
 	display: block; 
 	z-index: 10; cursor: pointer; 
@@ -81,7 +86,7 @@ zoom: 1;
 .flex-direction-nav li a:hover {
 	color:#fff;
 	text-decoration:none;
-}
+}*/
 .flexslider .flex-next {
 
 }
