--- a/static/css/style.css
+++ b/static/css/style.css
@@ -279,9 +279,9 @@ h2.pagetitle {
 }
 
 .navbar .navbar-brand img {
-	width: 30%;	
+	width: 20%;	
     position: static;
-    padding: 50px 50px;
+    padding: 30px 50px;
     z-index: -1;
 
 }
@@ -339,7 +339,8 @@ ul#menu-main > li > a:focus {
 	width: 100%;
 	min-height: 400px;
 	margin-top: -150px;
-	padding-top:260px;
+	padding-top: 150px;
+    padding-bottom: 110px;
 	text-align:center;
 }
 
@@ -366,7 +367,7 @@ header .logo {
 
 /* --- Header slider --- */
 #header-wrapper.header-slider {
-	background: #444 url(../img/bg/bg-1.jpg) no-repeat center center fixed;
+	background: #444 url(../img/bg/bg-1.jpg) no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -374,24 +375,25 @@ header .logo {
 }
 
 #main-flexslider ul.slides li p {
-	font-size: 50px;
-	text-transform: uppercase;
+	font-size: 25px;
+	text-transform: none;
 	position: relative;
 	margin-bottom: 0px;
 	text-align: center;
-	line-height: 1;
+	line-height: 1.2;
 	color:rgb(255, 255, 255);
 }
 									
 /*when screen gets samller change the slider*********************/
 @media (max-width:500px){
 	#main-flexslider ul.slides li p {
-	font-size: 30px;
+	font-size: 16px;
+	line-height: 1.1;
 	}
 }
 
 #main-flexslider.flexslider {
-		margin:0;
+		margin:80 0 0 0;
 		background:none;
 		border:none;
 	-webkit-border-radius: 0;
@@ -451,7 +453,7 @@ section.section {
 	padding: 10px 0 80px;
 }
 
-section
+
 section.section h4 {
 	text-align: center;
 	margin-bottom: 40px;
@@ -1719,16 +1721,51 @@ i.icon-white {
     z-index: -1;
 
 }}
-
-@media (max-width : 500px) {
+@media (max-width : 800px) {
 	.navbar .navbar-brand img {
-	width: 60%;	
+	width: 70%;	
     position: static;
     padding: 20px 10px;
     z-index: -1;
 
-}}}
+}}
+
+@media (max-width : 500px) {
+	.navbar .navbar-brand img {
+	width: 70%;	
+    position: static;
+    padding: 20px 5px;
+    z-index: -1;
+
+}}
 
 .categ{
 	text-decoration: none;
+}}
+
+.date-text{
+	color: #ffffff;
+    font-size: 18px;
+    text-transform: none;
+    font-weight: 500;
+    margin-top: -100px;
 }
+.title-text{
+	color: #ffffff;
+    font-size: 49px;
+    text-transform: none;
+    font-weight: 700;
+}
+
+.title-year{
+	color: #ffbb00;
+	margin-left: 15px;
+    font-size: 49px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.year{
+	padding: 25px 0
+}
+    
