--- a/templates/index.html
+++ b/templates/index.html
@@ -259,7 +259,7 @@
 	<!-- section: works -->
 	<section id="works" class="section">
 		<div class="container clearfix">
-			<h4>Our Works</h4>
+			<h4>Галлерея</h4>
 			<!-- portfolio filter -->
 			<div class="row">
 				<div id="filters" class="span12">
@@ -269,7 +269,7 @@
 								<h5>All</h5>
 							</a>
 						</li>
-						<li>
+						<!--<li>
 							<a href="#" data-filter=".web">
 								<h5>Web</h5>
 							</a>
@@ -288,7 +288,7 @@
 							<a href="#" data-filter=".photography">
 								<h5>Photography</h5>
 							</a>
-						</li>
+						</li>-->
 					</ul>
 				</div>
 				<!-- END PORTFOLIO FILTERING -->
