--- a/templates/index.html
+++ b/templates/index.html
@@ -299,7 +299,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print photography">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/1.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/1.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -314,7 +314,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print design web">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/2.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/2.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -329,7 +329,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print design">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/3.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/3.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -344,7 +344,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/4.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/4.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -359,7 +359,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/5.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/5.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -374,7 +374,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/6.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/6.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -389,7 +389,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/7.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/7.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -404,7 +404,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/8.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/8.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -419,7 +419,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid photography web">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/9.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/9.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -434,7 +434,7 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid design web">
 							<div class="portfolio">
-								<a href="{% static 'img/works/big.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="{% static 'img/works/10.jpg' %}" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="{% static 'img/works/10.png' %}" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
@@ -470,7 +470,7 @@
 	<!-- section: blog -->
 	<section id="blog" class="section">
 		<div class="container">
-			<h4>Our Blog</h4>
+			<h4>Новости</h4>
 			<!-- Three columns -->
 			<div class="row">
 				<div class="span3">
@@ -552,7 +552,7 @@
 			</div>
 			<div class="blankdivider30"></div>
 			<div class="aligncenter">
-				<a href="#" class="btn btn-large btn-theme">More blog post</a>
+				<a href="#" class="btn btn-large btn-theme">Читать дальше</a>
 			</div>
 		</div>
 	</section>
@@ -561,10 +561,8 @@
 	<!-- section: contact -->
 	<section id="contact" class="section green">
 		<div class="container">
-			<h4>Get in Touch</h4>
+			<h4>Обратная связь</h4>
 			<p>
-				Reque facer nostro et ius, cu persius mnesarchum disputando eam, clita prompta et mel vidisse phaedrum pri et. Facilisis posidonium ex his. Mutat iudico vis in, mea aeque tamquam scripserit an, mea eu ignota viderer probatus. Lorem legere consetetur ei
-				eum. Sumo aeque assentior te eam, pri nominati posidonium consttuam
 			</p>
 			<div class="blankdivider30">
 			</div>
