--- a/templates/index.html
+++ b/templates/index.html
@@ -74,9 +74,10 @@
 								</li>-->
 							</ul>
 						</div>
-						<!-- end slider -->
-					</div>
 				</div>
+				<div class="timer">
+
+				</div>						
 			</div>
 		</header>
 	</div>
