--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,9 @@
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 	<link href="{% static 'color/default.css' %}" rel="stylesheet">
 	<link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
+	<link rel="stylesheet" href="{% static 'css/style_countdown.css' %}" id="theme-stylesheet">
+	<!-- Custom stylesheet - for your changes-->
+	<link rel="stylesheet" href="{% static 'css/custom_countdown.css' %}">
 </head>
 
 <body>
@@ -74,12 +77,30 @@
 								</li>-->
 							</ul>
 						</div>
-				</div>
-				<div class="timer">
-
-				</div>						
+						
+				</div>				
 			</div>
-		</header>
+			<div id="countdown" class="container countdown">
+				<div class="row_countdown">
+					<div class="countdown-item col-sm-3 col-xs-6">
+						<div id="countdown-days" class="countdown-number">&nbsp;</div>
+						<div class="countdown-label">days</div>
+					</div>
+					<div class="countdown-item col-sm-3 col-xs-6">
+						<div id="countdown-hours" class="countdown-number">&nbsp;</div>
+						<div class="countdown-label">hours</div>
+					</div>
+					<div class="countdown-item col-sm-3 col-xs-6">
+						<div id="countdown-minutes" class="countdown-number">&nbsp;</div>
+						<div class="countdown-label">minutes</div>
+					</div>
+					<div class="countdown-item col-sm-3 col-xs-6">
+						<div id="countdown-seconds" class="countdown-number">&nbsp;</div>
+						<div class="countdown-label">seconds</div>
+					</div>
+				</div>
+			</div>
+		</header>		
 	</div>
 	<!-- spacer section -->
 	<section class="spacer green">
@@ -643,6 +664,12 @@
 	<script src="{% static 'js/animate.js' %}"></script>
 	<script src="{% static 'js/custom.js' %}"></script>
 	<script src="{% static 'contactform/contactform.js' %}"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="{% static 'js/jquery.cookie.js' %}"></script>
+	<script src="{% static 'js/jquery.countdown.min.js' %}"></script>
+	<script src="{% static 'js/front_countdown.js' %}"></script
 
 </body>
 
