--- a/static/css/style_countdown.css
+++ b/static/css/style_countdown.css
@@ -1,8 +1,9 @@
 .countdown{  
-  width: 100%;
-  padding: -10px 0px;
+  width: auto;
   position: relative;
   padding-bottom: 5px;
+  left: 0%;
+  right:0px;
   
   
   
@@ -12,26 +13,23 @@
 .row_countdown{
   position: absolute;
   align-content: center;
+      margin-top: 40px;
+    padding-top: 30px;
   width: 100%;
-  background: rgba(0, 0, 0, 0.40);
-  height: 150px;
+  background: rgba(0, 0, 0, 0.651);
   color: #fff;
-  display: inline-flex;
+  display: block;
   left: 0;
   z-index: 10;    
   border-right: 1px solid rgba(255, 255, 255, 0.30);
 }
-@media(min-width:500px){
-  .row_countdown{
-    padding-left: 31%;
-  }
-}
+
 
 .countdown-item{
   border-right: 1px;
   border-color: #fff;
-  padding-left: 50px;
-  padding-top: 60px;
+  display: inline-block;
+  padding: 20px;
 }
 
 .countdown-label{
