--- a/templates/index.html
+++ b/templates/index.html
@@ -133,10 +133,11 @@
 			<div class="row">
 				<div class="span4 offset1">
 					<div>
-						<h2>Олимпиада <strong>по робототехнике</strong></h2>
 						<p>
-							Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe
-							al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.
+							 Олимпиада по робототехнике - долгожданная ступень в развитии роботехники среди детей и взрослых в Кыргызстане.
+							Это событие призвано собрать единомышленников, близких по увлечению людей и просто всех желающих погрузиться в увлекательный
+							мир робототехники. Немаловажную роль играет ноциональный статус олимпиады, это означает, что наши ребята получат уникальную
+							возможность поделиться знаниями и пообщаться со сверстниками из других регионов страны.
 						</p>
 					</div>
 				</div>
@@ -146,52 +147,6 @@
 					</div>
 				</div>
 			</div>
-			<!--<div class="row">
-				<div class="span2 offset1 flyIn">
-					<div class="people">
-						<img class="team-thumb img-circle" src="{% static 'img/team/img-1.jpg' %}" alt="" />
-						<h3>John Doe</h3>
-						<p>
-							Art director
-						</p>
-					</div>
-				</div>
-				<div class="span2 flyIn">
-					<div class="people">
-						<img class="team-thumb img-circle" src="{% static 'img/team/img-2.jpg' %}" alt="" />
-						<h3>Mike Doe</h3>
-						<p>
-							Web developer
-						</p>
-					</div>
-				</div>
-				<div class="span2 flyIn">
-					<div class="people">
-						<img class="team-thumb img-circle" src="{% static 'img/team/img-3.jpg' %}" alt="" />
-						<h3>Neil Doe</h3>
-						<p>
-							Web designer
-						</p>
-					</div>
-				</div>
-				<div class="span2 flyIn">
-					<div class="people">
-						<img class="team-thumb img-circle" src="{% static 'img/team/img-4.jpg' %}" alt="" />
-						<h3>Mark Joe</h3>
-						<p>
-							UI designer
-						</p>
-					</div>
-				</div>
-				<div class="span2 flyIn">
-					<div class="people">
-						<img class="team-thumb img-circle" src="{% static 'img/team/img-5.jpg' %}" alt="" />
-						<h3>Stephen B</h3>
-						<p>
-							Digital imaging
-						</p>
-					</div>
-				</div>-->
 			</div>
 		
 		<!-- /.container -->
@@ -205,29 +160,29 @@
 			<div class="row">
 				<div class="span3 animated-fast flyIn">					
 					<div class="service-box">
-						<a href="" class="categ" style="text-decoration:none;">
+						<a href="/category" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/line_follower.svg' %}" alt="" />
 						<h2>Lego Line follower</h2>
 						<p>
-							Robot parts can be only lego. Must be programmed to run the lines
+							 Проехать по дорожке, отмеченной черной линией, как можно быстрее
 						</p>
 						</a>
 					</div>
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<a href="" class="categ" style="text-decoration:none;">
+						<a href="/category" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/sumo.svg' %}" alt="" />
 						<h2>Lego Sumo</h2>
 						<p>
-							Robots have to move each other out of the ring
+							Робот, должен выталкивать робота-противника за пределы черной линии ринга.
 						</p>
 						</a>
 					</div>
 				</div>
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<a href="" class="categ" style="text-decoration:none;">
+						<a href="/category" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/arduino.svg' %}" alt="" />
 						<h2>Ardunio Line Follower</h2>
 						<p>
@@ -238,7 +193,7 @@
 				</div>
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
-						<a href="" class="categ" style="text-decoration:none;">
+						<a href="/category" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/ollo_race.svg' %}" alt="" />
 						<h2>Ollo Race</h2>
 						<p>
@@ -251,7 +206,7 @@
 			<div class="row" style="margin-bottom:0px;">
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<a href="" class="categ" style="text-decoration:none;">
+						<a href="/category" class="categ" style="text-decoration:none;">
 							<img src="{% static 'img/icons/ollo_ball.svg' %}" alt="" />
 							<h2>Ollo Ball Collector</h2>
 							<p>
@@ -262,7 +217,7 @@
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<a href="" class="categ" style="text-decoration:none;">
+						<a href="/category" class="categ" style="text-decoration:none;">
 							<img src="{% static 'img/icons/bioloid_race.svg' %}" alt="" />
 							<h2>Bioloid Race</h2>
 							<p>
@@ -273,7 +228,7 @@
 				</div>
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<a href="" class="categ" style="text-decoration:none;">
+						<a href="/category" class="categ" style="text-decoration:none;">
 							<img src="{% static 'img/icons/bioloid_sumo.svg' %}" alt="" />
 							<h2>Bioloid Sumo</h2>
 							<p>
@@ -600,6 +555,8 @@
 
 	<!-- end spacer section -->
 	<!-- section: contact -->
+
+	
 	<section id="contact" class="section green" >
 		<div class="container">			
 			<a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
