--- a/templates/category.html
+++ b/templates/category.html
@@ -1,9 +1,12 @@
 {% load static%}
 <link rel="stylesheet" href="{% static 'css/category.css' %}">
 <title>Категории</title>
-<h1>Категории</h1>
-<div class="tabs">
+<div class="back">
 
+</div>
+
+<div class="tabs">
+<h1>Категории</h1>
     <input type="radio" id="tab1" name="tab-control" checked>
     <input type="radio" id="tab2" name="tab-control">
     <input type="radio" id="tab3" name="tab-control">
