--- a/templates/category.html
+++ b/templates/category.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="{% static 'css/category.css' %}">
 <title>Категории</title>
 <div class="back">
+    <img src="{% static 'img/categ.jpg' %}" alt="" />
 
 </div>
 
